--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,7 @@ build-backend = "setuptools.build_meta"
 [tool.isort]
 profile = "black"
 line_length = 120
+
+[tool.black]
+target-version = ["py37"]
+line-length = 120
