--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,8 @@ line_length = 120
 [tool.black]
 target-version = ["py37"]
 line-length = 120
+
+[tool.mypy]
+python_version = "3.7"
+strict = true
+pretty = true
